<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>modless</artifactId>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>spring-boot-maven-plugin</artifactId>
          <groupId>org.springframework.boot</groupId>
          <version>${spring.boot.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <parameters>true</parameters>
            <release>${maven.compiler.release}</release>
          </configuration>
          <version>${maven.compiler.plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven.surefire.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>${spotless.version}</version>
        <configuration>
          <java>
            <googleJavaFormat>
              <version>${google-java-format.version}</version>
              <style>GOOGLE</style>
              <reflowLongStrings>true</reflowLongStrings>
            </googleJavaFormat>
            <formatAnnotations />
            <removeUnusedImports />
            <trimTrailingWhitespace />
            <endWithNewline />
          </java>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <skip>true</skip>
        </configuration>
        <groupId>org.springframework.boot</groupId>
        <version>${spring.boot.version}</version>
      </plugin>
    </plugins>
  </build>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <artifactId>spring-boot-dependencies</artifactId>
        <groupId>org.springframework.boot</groupId>
        <scope>import</scope>
        <type>pom</type>
        <version>${spring.boot.version}</version>
      </dependency>
      <dependency>
        <artifactId>spring-ai-bom</artifactId>
        <groupId>org.springframework.ai</groupId>
        <scope>import</scope>
        <type>pom</type>
        <version>${spring.ai.version}</version>
      </dependency>
      <dependency>
        <artifactId>platform-domain</artifactId>
        <groupId>${project.groupId}</groupId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <artifactId>platform-application</artifactId>
        <groupId>${project.groupId}</groupId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <artifactId>platform-storage-postgres</artifactId>
        <groupId>${project.groupId}</groupId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <artifactId>platform-modeling</artifactId>
        <groupId>${project.groupId}</groupId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <artifactId>mde-etl-runner</artifactId>
        <groupId>${project.groupId}</groupId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <artifactId>mde-m2t-runner</artifactId>
        <groupId>${project.groupId}</groupId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <artifactId>mde-evl-validator</artifactId>
        <groupId>${project.groupId}</groupId>
        <version>${project.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <description>Model-Driven Low-Code Platform for Serverless Software Development.</description>
  <groupId>io.mehdieidi</groupId>

  <modelVersion>4.0.0</modelVersion>
  <modules>
    <module>apps/backend</module>
    <module>packages/java/platform-domain</module>
    <module>packages/java/platform-application</module>
    <module>packages/java/platform-storage-postgres</module>
    <module>packages/java/platform-modeling</module>
    <module>packages/java/mde-etl-runner</module>
    <module>packages/java/mde-evl-validator</module>
    <module>packages/java/mde-m2t-runner</module>
    <module>tools/mde-cli</module>
    <module>tools/mde-evl-cli</module>
    <module>tools/mde-etl-cli</module>
    <module>tools/mde-m2t-cli</module>
  </modules>

  <name>Modless</name>

  <packaging>pom</packaging>

  <properties>
    <google-java-format.version>1.25.2</google-java-format.version>
    <java.version>17</java.version>
    <maven.compiler.plugin.version>3.14.0</maven.compiler.plugin.version>
    <maven.compiler.release>${java.version}</maven.compiler.release>
    <maven.surefire.version>3.5.4</maven.surefire.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <spotless.version>2.44.3</spotless.version>
    <spring.ai.version>1.1.7</spring.ai.version>
    <spring.boot.version>3.5.15</spring.boot.version>
  </properties>

  <version>0.0.1-SNAPSHOT</version>
</project>
